[gd_scene load_steps=26 format=2]

[ext_resource path="res://2MBMgBr.gd" type="Script" id=1]
[ext_resource path="res://Chemicals/2-methyl-butane-magnesium-bromide-01.png" type="Texture" id=2]
[ext_resource path="res://ReactionsButtons/AHAddButton.png" type="Texture" id=3]
[ext_resource path="res://ReactionsButtons/AHAddPressed.png" type="Texture" id=4]
[ext_resource path="res://ReactionsButtons/AHAddHover.png" type="Texture" id=5]
[ext_resource path="res://ReactionsButtons/EpoxAddButton.png" type="Texture" id=6]
[ext_resource path="res://ReactionsButtons/EpoxAddPressed.png" type="Texture" id=7]
[ext_resource path="res://ReactionsButtons/EpoxAddHover.png" type="Texture" id=8]
[ext_resource path="res://ReactionsButtons/BlankButton.png" type="Texture" id=9]
[ext_resource path="res://ReactionsButtons/BlankPressed.png" type="Texture" id=10]
[ext_resource path="res://ReactionsButtons/BlankHover.png" type="Texture" id=11]
[ext_resource path="res://2MBMgBr-2MH-AHAdd/1-01.png" type="Texture" id=12]
[ext_resource path="res://2MBMgBr-2MH-AHAdd/2-01.png" type="Texture" id=13]
[ext_resource path="res://2MBMgBr-2MH-AHAdd/3-01.png" type="Texture" id=14]
[ext_resource path="res://2MBMgBr-2MH-AHAdd/4-01.png" type="Texture" id=15]
[ext_resource path="res://2MBMgBr-2MH-AHAdd/5-01.png" type="Texture" id=16]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/1-01.png" type="Texture" id=17]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/2-01.png" type="Texture" id=18]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/3-01.png" type="Texture" id=19]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/4-01.png" type="Texture" id=20]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/5-01.png" type="Texture" id=21]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/6-01.png" type="Texture" id=22]
[ext_resource path="res://2MBMgBr-5MHoh-EpoxAdd/7-01.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "2MBMgBr-2MH-AHAdd",
"speed": 1.5
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": false,
"name": "2MBMgBr-5MHoh-EpoxAdd",
"speed": 1.5
} ]

[node name="2MBMgBr" type="TextureRect"]
margin_right = 900.0
margin_bottom = 650.0
script = ExtResource( 1 )

[node name="2MBMgBr" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="AHAdd" type="TextureButton" parent="."]
margin_left = 40.75
margin_top = 540.0
margin_right = 221.75
margin_bottom = 619.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="EpoxAdd" type="TextureButton" parent="."]
margin_left = 253.25
margin_top = 540.0
margin_right = 434.25
margin_bottom = 619.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Blank1" type="TextureButton" parent="."]
margin_left = 465.75
margin_top = 540.0
margin_right = 646.75
margin_bottom = 610.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Blank2" type="TextureButton" parent="."]
margin_left = 678.25
margin_top = 540.0
margin_right = 859.25
margin_bottom = 610.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="2MBMgBr-2MH-AHAdd" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "2MBMgBr-2MH-AHAdd"
centered = false

[node name="2MBMgBr-5MHoh-EpoxAdd" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "2MBMgBr-5MHoh-EpoxAdd"
centered = false

[connection signal="pressed" from="AHAdd" to="." method="_on_AHAdd_pressed"]
[connection signal="pressed" from="EpoxAdd" to="." method="_on_EpoxAdd_pressed"]
